# mixup_3rd_6team

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  README.md  pytest.ini  requirements.txt
backend/app/: main.py
backend/tests/: test_address_parser.py  test_api.py  test_auxiliary_services.py  test_checklist_rules.py  test_config.py  test_diagnosis_agent.py  test_formatters.py  test_full_endpoint.py  test_jeonse_rules.py  test_lawd_codes.py  test_llm_client.py  test_market_diagnosis.py  test_market_filter.py  test_market_rules.py  test_molit_client.py  test_registry_ocr.py  test_registry_parser.py  test_registry_rules.py  test_saju_agent.py  test_schemas.py  test_solar_pro.py  test_workflow.py
src/: App.jsx  index.css
src/api/: mockApi.js
src/components/: RiskBadge.jsx  (+4 more)
vl/: .env.example  .gitignore  pyproject.toml
vl/app/: main.py
vl/app/api/routes/: diagnoses.py
vl/app/clients/: llm.py  molit.py
vl/app/core/: config.py
vl/app/graph/: state.py  workflow.py
vl/app/services/: address_parser.py  checklist.py  clauses.py  document_extractor.py  document_rules.py  hug_precheck.py  market_diagnosis.py
vl/docs/superpowers/plans/: 2026-05-23-jeonse-contract-assistant-backend.md
vl/docs/superpowers/specs/: 2026-05-23-jeonse-contract-assistant-design.md
vl/tests/: test_address_parser.py  test_api.py  test_auxiliary_services.py  test_config.py  test_full_endpoint.py  test_llm_client.py  test_market_diagnosis.py  test_market_filter.py  test_molit_client.py  test_schemas.py  test_workflow.py
(+58 files in other folders)
