[project]
name = "jeonse-contract-assistant"
version = "0.1.0"
description = "Backend-only jeonse contract risk diagnosis prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
